static/css/styles.css
body { 
    padding-top: 90px;
    font-size: 18px;
    color: black;
    font-family: 'Roboto', sans-serif;
}

/** Flash messages **/
.alert {
  padding: 20px;
  background-color: #f44336;
  color: white;
  opacity: 1;
  transition: 0.6s;
  margin-top: 90px;
  width: 30%;
  text-align: center;
  left: 35%;
}

.alert.success {background-color: #04AA6D;}

.closebtn {
  margin-left: 15px;
  color: white;
  font-weight: bold;
  float: right;
  font-size: 22px;
  line-height: 20px;
  cursor: pointer;
  transition: 0.3s;
}

.closebtn:hover {
  color: black;
}
/** Flash messages **/

/** Header **/
nav {
    background: linear-gradient(to bottom, #ffff66 0%, #ffcc99 100%);
    height: 140px; 
}

.navbar-brand {
    padding-top: 25px;
    padding-bottom: 25px;
    padding-left: 25px;
} 

.navbar-nav { 
    margin-left: auto;  
    padding-top: 45px; 
} 

 .navbar-brand h1 {
   padding-top: 35px;
   padding-left: 30px;  
}
nav li {
    display: inline-block;
    height: 100%;
    padding-right: 40px;
    font-family: 'RocknRoll One', sans-serif;
}

.custom-toggler.navbar-toggler { 
    border-color: transparent; 
    box-shadow: none;
    padding-top: 40px;
} 
        
.custom-toggler .navbar-toggler-icon { 
    background-image: url( 
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E"); 
} 

.navbar-toggler.collapsed .close-icon {
    display: none;
   }

.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
    display: inline;
   }

.close-icon {
    color: black; 
}
/** End of header **/

/** Footer **/
.footer { 
    color: black;
    background-color: #ffff66;
    width: 100%;
    position: absolute;
    font-family: 'RocknRoll One', sans-serif;
}

.fa:hover {
    opacity: 0.7;
    color: black;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}

.fa-twitter {
  background: #55ACEE;
  color: white;
}

.fa-instagram {
  background: #125688;
  color: white;
}

footer p u:hover {
    opacity: 0.7;
    color: black;
}
/** End of footer **/

/** Who we are **/
.founder img {
    margin-top: 120px;
    margin-left: 50px;
    height: 350px;
    width: 300px;
    border-radius: 50%;

}

.about {
    margin-top: 60px;
    margin-bottom: 60px;
}

.about h2 {
    font-family: 'RocknRoll One', sans-serif;
    font-size: 50px;
    margin-left: 60px;
    margin-top: 60px;
}

.about p {
    margin-top: 30px;
    margin-left: 60px;
    font-size: 18px;
    line-height: 35px;
}

.about-us {
    background-image: linear-gradient(#ffcc99, #ffff66);
    height: 530px;
}

.square {
  height: 300px;
  width: 300px;
  background-color:pink;
  margin-left: 90px;
  text-align: center;
}

.why-us{
    position: relative;
}

/** End of Who we are **/

/** Club picks page **/
.responsive {
  width: 100%;
  height: auto;
}
.category-tile { 
  position: relative;
  margin-bottom: 100px; 
}

/** Modals **/
.modal-btn {
    margin-top: 10px;
    margin-left: 40px;
}

.book-tile img {
    width: 200px;
    height: 280px; 
}

.book-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}

.about-book {
    margin-left: 40px;
    margin-right: 40px;
}

/** End of Club picks page **/

/** Your picks page **/
.responsive {
  width: 100%;
  height: auto;
}
.category-tile { 
  position: relative;
  margin-bottom: 100px; 
}
/** End of Your picks page **/

/** Login page **/
.myform {
    margin-top: 100px;
    margin-bottom: 50px;
	position: relative;
	display: -ms-flexbox;
	display: flex;
	padding: 1rem;
	-ms-flex-direction: column;
	flex-direction: column;
	width: 100%;
	pointer-events: auto;
	background-color: #fff;
	background-clip: padding-box;
	border: 1px solid rgba(0,0,0,.2);
	border-radius: 1.1rem;
	outline: 0;
	max-width: 500px;
}

.form-group{
    margin: 5px;
}

.mybtn {
    margin-top: 20px;
}
  
.tx-tfm{
    text-transform:uppercase;
}
                 
.login-or {
    position: relative;
    color: #aaa;
    margin-top: 10px;
    margin-bottom: 20px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.span-or {
    display: block;
    position: absolute;
    left: 50%;
    top: 10px;
    margin-left: -25px;
    background-color: #fff;
    width: 50px;
    text-align: center;
}
         
.hr-or {
    height: 1px;
    margin-top: 0px !important;
    margin-bottom: 0px !important;
}
/** End of Login page **/

/** Large devices only **/
@media (min-width: 1200px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}
.active a:hover {
    border-bottom: 1px solid black;
}
.active {
  border-bottom: 1px solid black;
}

/** Footer **/
#subscribe {
    padding: 80px; 
    font-size: 16px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 60px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 20px;  
  font-size: 30px;
  width: 70px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile {
    padding-left: 60px;
}
.category-tile img {
    width: 200px;
    height: 280px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Medium devices only **/
@media (min-width: 992px) and (max-width: 1199px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 1.5em;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
    line-height: .75;
}
.active a:hover {
    border-bottom: 1px solid black;
}
.active {
  border-bottom: 1px solid black;
}

/** Footer **/
#subscribe {
    padding:80px; 
    font-size: 16px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 60px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 20px;  
  font-size: 30px;
  width: 70px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile img {
    width: 160px;
    height: 240px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Small devices only **/
@media (min-width: 768px) and (max-width: 991px) {

/** Header **/
nav li {
    display: inline-block;
    height: 100%;
    padding-left: 25px; 
}

.navbar-collapse {
   padding-left: 25px;
   padding-top: 0px; 
   margin-top: 17px;
   margin-bottom: 20px;
   background-color: white;
}

/** Footer **/
#subscribe {
    padding:70px; 
    font-size: 13px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 50px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 15px;  
  font-size: 20px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 60px;
    font-size: 30px; 
}
.category-tile img {
    width: 140px;
    height: 200px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

/** Extra small devices only **/
@media (max-width: 767px) {

/** Header **/
.navbar-brand h1{
    font-family: 'RocknRoll One', sans-serif;
    color: black;
    font-size: 25px;
    font-weight: bold;
    margin-top: 0;
    margin-bottom: 0;
}
.navbar-brand h1 {
   padding-top: 35px;
   padding-left: 20px;  
}
nav li {
    display: inline-block;
    height: 100%;
    padding-left: 30px; 
}  

.navbar-collapse {
   padding-left: 25px;
   padding-top: 0px; 
   margin-top: 17px;
   margin-bottom: 20px;
   background-color: white;
}
/** Footer **/
#subscribe {
    padding: 20px; 
    font-size: 13px;
    text-align: center;
    display: inline-block;
    height: 100%;
}
#social-media { 
    padding: 20px; 
    text-align: center;
    display: inline-block;
    height: 100%;
}
.fa {
  padding: 15px;  
  font-size: 20px;
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 5px;
  border-radius: 50%;
}

/** Your picks page **/
#your-picks-title {
    padding: 60px;
    margin-top: 40px;
    font-size: 20px; 
}
.category-tile img {
    width: 140px;
    height: 200px; 
    margin-left: 20px; 
}
.category-tile span {
  position: absolute;
  display: block; 
  margin-top: 20px; 
  margin-left: 20px;
  text-align: center;
  font-size: 16px;
  background-color: #87cefa;
  color: black;
  opacity: .8;
}
}

.books,
.book-heading {
    margin: 80px 40px 0 40px;
}

.books,
.container-book-lists {
    height: 80%;
    overflow: scroll;
}

.book {
    height: 250px;
}

.book img {
    height: 180px;
    width: 130px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    margin: 0 auto;
    -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
            box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
    cursor: pointer;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}

.book img:active {
    -webkit-transform: scale(1.05);
        -ms-transform: scale(1.05);
            transform: scale(1.05);
}

.title p {
    max-width: 130px;
    font-size: 0.7rem;
    font-weight: 600;
    margin: 0 auto
}

.title p:first-child {
    font-size: 0.8rem;
    margin-top: 3px;
}

